--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,3 +1,67 @@
+:root {
+  --lightshade: #F0F5F1; /* Use this color as the background for your dark-on-light designs, or the
+  text color of an inverted design. */
+  --lightaccent: #ABB3B5; /* Accent colors can be used to bring attention to design elements by
+  contrasting with the rest of the palette. */
+  --primary: #FFF41E; /* This color should be eye-catching but not harsh. It can be liberally 
+    applied to your layout as its main identity. */
+  --darkaccent: #D13E49; /* Another accent color to consider. Not all colors have to be used -
+    sometimes a simple color scheme works best. */
+  --darkshade: #202C3A; /* Use as the text color for dark-on-light designs, or as the background 
+    for inverted designs. */
+  --grey: #d3d3d3;
+  --success: #67ad59;
+  --warning: #e49d21;
+  --danger: #f44336;
+  --deepboxshadow:
+    0 16px 38px -12px rgba(0, 0, 0, 0.56), 
+    0 4px 25px 0px rgba(0, 0, 0, 0.12), 
+    0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  --shallowboxshadow:
+    0 2px 2px 0 rgba(0, 0, 0, 0.14), 
+    0 3px 1px -2px rgba(0, 0, 0, 0.2), 
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  --maxwidth: 1000px;
+  --fontfamily:  'Roboto', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
+  'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', 
+  Tahoma, Geneva, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --borderradius: 5px;
+
+  /* scale for 1.2 */
+  --font-size-1: 1rem;
+  --font-size-2: 1.2rem;
+  --font-size-3: 1.44rem;
+  --font-size-4: 1.728rem;
+  --font-size-5: 2.074rem;
+  --font-size-6: 2.488rem;
+  /* scale for 1.2 */
+  --line-height-1: 1.2rem;
+  --line-height-2: 1.44rem;
+  --line-height-3: 1.728rem;
+  --line-height-4: 2.074rem;
+  --line-height-5: 2.488rem;
+  --line-height-6: 2.986rem;
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    /* scale for 1.33 */
+    --font-size-1: 1rem;
+    --font-size-2: 1.333rem;
+    --font-size-3: 1.777rem;
+    --font-size-4: 2.369rem;
+    --font-size-5: 3.157rem;
+    --font-size-6: 4.209rem;
+    /* scale for 1.33 */
+    --line-height-1: 1.333rem;
+    --line-height-2: 1.777rem;
+    --line-height-3: 2.369rem;
+    --line-height-4: 3.157rem;
+    --line-height-5: 4.209rem;
+    --line-height-6: 5.598rem;
+  }
+}
+
 html {
   font-family: 'Roboto', sans-serif;
   -ms-text-size-adjust: 100%;
