--- a/src/shared/styles.scss
+++ b/src/shared/styles.scss
@@ -74,10 +74,10 @@
     0 8px 10px -5px rgba(54, 19, 19, 0.2);
   --shallowboxshadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  --font-family: 'Roboto', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
+  --font-family: 'Inter', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
   'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', 
   Tahoma, Geneva, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --headline-font-family: 'Roboto', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
+  --headline-font-family: 'Inter', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
   'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', 
   Tahoma, Geneva, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   --maxwidth: 1000px;
@@ -122,6 +122,7 @@
 html {
   font-family: var(--font-family);
   font-size: 16px;
+  font-weight: 300;
   color: var(--darkshade);
 }
 p {
@@ -130,26 +131,32 @@ p {
 h1 {
   line-height: var(--line-height-6);
   font-size: var(--font-size-6);
+  font-weight: 900;
 }
 h2 {
   line-height: var(--line-height-5);
   font-size: var(--font-size-5);
+  font-weight: 900;
 }
 h3 {
   line-height: var(--line-height-4);
   font-size: var(--font-size-4);
+  font-weight: 900;
 }
 h4 {
   line-height: var(--line-height-3);
   font-size: var(--font-size-3);
+  font-weight: 900;
 }
 h5 {
   line-height: var(--line-height-2);
   font-size: var(--font-size-2);
+  font-weight: 900;
 }
 h6 {
   line-height: var(--line-height-1);
   font-size: var(--font-size-1);
+  font-weight: 900;
 }
 pre {
   overflow: scroll;
@@ -160,6 +167,10 @@ pre {
 }
 a {
   color: var(--darkaccent);
+}
+img {
+  max-width: 700px;
+  width: 90vw;
 }
 .calendly-overlay {
   background-color: rgba(31,31,31,0.8) !important;
