--- a/src/shared/styles.scss
+++ b/src/shared/styles.scss
@@ -1,44 +1,3 @@
-@mixin max-tablet {
-  @media screen and (max-width: 768px) {
-    @content;
-  }
-}
-@mixin min-tablet {
-  @media screen and (min-width: 768px) {
-    @content;
-  }
-}
-@mixin phone-landscape-to-tablet {
-  @media screen and (min-width: 550px) and (max-width: 767px) {
-    @content;
-  }
-}
-@mixin tablet-to-desktop {
-  @media screen and (min-width: 768px) and (max-width: 1279px) {
-    @content;
-  }
-}
-@mixin min-desktop {
-  @media screen and (min-width: 1280px) {
-    @content;
-  }
-}
-@mixin max-desktop {
-  @media screen and (max-width: 1279px) {
-    @content;
-  }
-}
-@mixin desktop-to-hd {
-  @media screen and (min-width: 1280px) and (max-width: 2999px) {
-    @content;
-  }
-}
-@mixin min-hd {
-  @media screen and (min-width: 3000px) {
-    @content;
-  }
-}
-
 :root {
   /* Use this color as the background for your dark-on-light designs, or the 
   text color of an inverted design. */
@@ -48,8 +7,8 @@
   /* Accent colors can be used to bring attention to design elements by 
   contrasting with the rest of the palette. */
   --lightaccent: #2A95BF;
-  --lightaccent-darker: #1C6380;
-  --lightaccent-lighter: #38C5FF;
+  --lightaccent-darker: #38C5FF;
+  --lightaccent-lighter: #1C6380;
   /* This color should be eye-catching but not harsh. Can be liberally applied 
   to your layout as the main identity. */
   --primary: #FFF41E;
@@ -57,9 +16,9 @@
   --primary-lighter: #FFFF05;
   /* Another accent color to consider. Not all colors have to be used sometimes 
   a simple color scheme works best. */
-  --darkaccent: #D13E49;
-  --darkaccent-darker: #912C32;
-  --darkaccent-lighter: #DE434D;
+  --darkaccent: rgb(0,117,154);
+  --darkaccent-darker: rgb(0,54,75);
+  --darkaccent-lighter: rgb(0,200,200);
   /* Use as the text color for dark-on-light designs, or as the background for 
   inverted designs. */
   --darkshade: #202C3A;
@@ -74,12 +33,9 @@
     0 8px 10px -5px rgba(54, 19, 19, 0.2);
   --shallowboxshadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  --font-family: 'Roboto', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
-  'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', 
-  Tahoma, Geneva, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --headline-font-family: 'Roboto', Frutiger, 'Frutiger Linotype', Univers, Calibri, 'Gill Sans', 
-  'Gill Sans MT', 'Myriad Pro', Myriad, 'DejaVu Sans Condensed', 'Liberation Sans', 'Nimbus Sans L', 
-  Tahoma, Geneva, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family: 'EB Garamond', serif;
+  --headline-font-family: 'EB Garamond', serif;
+  --mono-font-family: 'Roboto Mono', monospace;
   --maxwidth: 1000px;
   --borderradius: 5px;
 
@@ -99,25 +55,6 @@
   --line-height-6: 2.986rem;
 }
 
-
-@include min-tablet() {
-  :root {
-    /* scale for 1.33 */
-    --font-size-1: 1rem;
-    --font-size-2: 1.333rem;
-    --font-size-3: 1.777rem;
-    --font-size-4: 2.369rem;
-    --font-size-5: 3.157rem;
-    --font-size-6: 4.209rem;
-    /* scale for 1.33 */
-    --line-height-1: 1.333rem;
-    --line-height-2: 1.777rem;
-    --line-height-3: 2.369rem;
-    --line-height-4: 3.157rem;
-    --line-height-5: 4.209rem;
-    --line-height-6: 5.598rem;
-  }
-}
 // Base styles
 html {
   font-family: var(--font-family);
@@ -153,7 +90,7 @@ h6 {
 }
 pre {
   overflow: scroll;
-  background: var(--darkaccent);
+  background: var(--darkaccent-lighter);
   padding: 1rem;
   border-radius: var(--borderradius);
   color: var(--darkshade);
@@ -163,4 +100,8 @@ a {
 }
 .calendly-overlay {
   background-color: rgba(31,31,31,0.8) !important;
+}
+
+code {
+  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
 }
